[package]
name = "keys-and-addresses"
version = "0.1.0"
authors = ["Sam Larsen"]
edition = "2021"
readme = "README.md"
license = "MIT"

[dependencies]
base58 = "0.2.0"
curve25519-dalek = "4.1.3"
k256 = "0.13.3"
rand = "0.8.5"
ripemd = "0.1.3"
sha2 = "0.10.8"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
